# docs/swagger.json
@@ -102,6 +102,12 @@
                         "schema": {
                             "$ref": "#/definitions/echo.HTTPError"
                         }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
                     }
                 }
             }
@@ -117,7 +123,7 @@
                 "tags": [
                     "companies"
                 ],
-                "summary": "Add Location To Company",
+                "summary": "Assign Location To Company",
                 "parameters": [
                     {
                         "type": "integer",
@@ -141,11 +147,16 @@
                             "$ref": "#/definitions/entity.Company"
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "405": {
+                        "description": "Method Not Allowed",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
                         }
                     }
                 }
@@ -184,6 +195,12 @@
                         "schema": {
                             "$ref": "#/definitions/echo.HTTPError"
                         }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
                     }
                 }
             },
@@ -197,7 +214,7 @@
                 "tags": [
                     "companies"
                 ],
-                "summary": "Delete Companies",
+                "summary": "Delete Company",
                 "parameters": [
                     {
                         "type": "integer",
@@ -211,15 +228,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "type": "string"
                         }
                     },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "204": {
+                        "description": "No Content",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
                         }
                     }
                 }
@@ -323,6 +344,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/echo.HTTPError"
                         }
